--- a/textarea.html
+++ b/textarea.html
@@ -138,38 +138,18 @@
 
       //Character Counter
       var characterLimit = function(event) {
-        var remainingOutput = document.querySelector('#remaining')
+        var remaining = document.querySelector('#remaining')
         var characters = event.target.value
-        var max = 300
         var count = characters.length
+        var max = 300
         var diff = max - count
-        var rem = null
 
-
-        switch(diff){
-          case diff % 50 === 0:
-            rem = diff
-            break;
-          case diff === 25:
-            rem = diff
-            break;
-          case diff === 10:
-            rem = diff
-            break;
-          case diff < 1:
-            console.log("You've exceeded maximum amount of characters")
-            break;
-          default:
+        if ((diff % 50 === 0) || (diff === 25)|| (diff === 10)) {
+          remaining.textContent = "Characters remaining: " + (diff)
+        } else if (diff < 1) {
+          console.log("You've exceeded maximum amount of characters!")
         }
 
-        console.log(rem)
-
-        if (rem) {
-          remaining.textContent = "Characters remaining: " + (rem)
-        }
-
-
-        //increments of 50 so 250, 150..., 25, 10, then console.log(hit the limits)
         //special to announce to hidden text two separate things for sighted users and non sighted users
         //some people might get offended so sighted/nonsighted is safe way to
         //ablism there is a whole term
@@ -178,7 +158,8 @@
       }
 
       document.querySelector('#character-limit').addEventListener('click', characterLimit)
-      document.querySelector('#character-limit').addEventListener('keyup', characterLimit)
+      document.querySelector('#character-limit').addEventListener('keypress', characterLimit)
+      // document.querySelector('#character-limit').addEventListener('keyup', characterLimit)
 
     </script>
   </body>
