changes visual characters remaining 300 back so that only the announcement reads 300 characters remaning

--- a/textarea.html
+++ b/textarea.html
@@ -80,7 +80,7 @@
 
         <span id="special-announcements" class="visually-hidden" aria-live="assertive"></span>
         
-        <p role="text" id="remaining">300 characters remaining</p>
+        <p role="text" id="remaining">Characters remaining 300</p>
 
         <span class="visually-hidden">end of text area with limited characters  and character counter example</span>
 
