--- a/textarea.html
+++ b/textarea.html
@@ -159,7 +159,7 @@
 
         //resets back to default
         remaining.style.color = '';
-        remaining.textContent = 'Characters remaining ' + diff ;
+        remaining.textContent = 'Characters remaining ' + diff;
         target.setAttribute('aria-invalid', false);
 
 
@@ -169,7 +169,7 @@
           console.log("You've exceeded maximum amount of "+max+" characters!");
         } 
 
-        target.diff = diff
+        target.diff = diff;
 
       };
 
